@startuml
class java.util.ArrayList
class java.util.Scanner
class observer3.ConcreteSubscriber
class observer3.Publisher
class observer3.Test
interface observer3.Subscriber
observer3.ConcreteSubscriber --|> observer3.Subscriber
observer3.Publisher ..> java.util.ArrayList
observer3.Publisher ..> java.util.Scanner
@enduml